--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "norish",
-  "version": "0.15.2-beta",
+  "version": "0.15.3-beta",
   "private": true,
   "type": "module",
   "packageManager": "pnpm@10.27.0",
@@ -15,7 +15,7 @@
     "db:push": "pnpm run db:ensure && drizzle-kit push --config ./server/db/drizzle.config.ts",
     "db:generate": "drizzle-kit generate --config ./server/db/drizzle.config.ts",
     "migrate": "pnpm run db:ensure && drizzle-kit push --config ./server/db/drizzle.config.ts",
-    "docker:build": "docker build -f docker/Dockerfile -t norishapp/norish:latest .",
+    "docker:build": "docker build -f docker/Dockerfile -t norishapp/norish:test .",
     "docker:up": "docker-compose -f docker/docker-compose.yml up",
     "docker:down": "docker-compose -f docker/docker-compose.yml down",
     "start": "node dist-server/server.cjs",
@@ -29,15 +29,15 @@
     "i18n:check": "node scripts/check-locale-keys.js"
   },
   "dependencies": {
-    "@ai-sdk/anthropic": "^3.0.2",
-    "@ai-sdk/azure": "^3.0.2",
-    "@ai-sdk/deepseek": "^2.0.2",
-    "@ai-sdk/google": "^3.0.2",
-    "@ai-sdk/groq": "^3.0.2",
-    "@ai-sdk/mistral": "^3.0.2",
-    "@ai-sdk/openai": "^3.0.2",
-    "@ai-sdk/openai-compatible": "^2.0.2",
-    "@ai-sdk/perplexity": "^3.0.2",
+    "@ai-sdk/anthropic": "^3.0.9",
+    "@ai-sdk/azure": "^3.0.7",
+    "@ai-sdk/deepseek": "^2.0.4",
+    "@ai-sdk/google": "^3.0.6",
+    "@ai-sdk/groq": "^3.0.4",
+    "@ai-sdk/mistral": "^3.0.5",
+    "@ai-sdk/openai": "^3.0.7",
+    "@ai-sdk/openai-compatible": "^2.0.4",
+    "@ai-sdk/perplexity": "^3.0.4",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -45,7 +45,7 @@
     "@trpc/client": "^11.8.1",
     "@trpc/server": "^11.8.1",
     "@trpc/tanstack-react-query": "^11.8.1",
-    "ai": "^6.0.6",
+    "ai": "^6.0.23",
     "better-auth": "^1.4.10",
     "bullmq": "^5.66.4",
     "date-fns": "^4.1.0",
@@ -53,7 +53,7 @@
     "drizzle-zod": "0.8.3",
     "heic-convert": "^2.1.0",
     "html-entities": "^2.6.0",
-    "ioredis": "^5.8.2",
+    "ioredis": "^5.9.1",
     "next": "16.1.1",
     "next-intl": "^4.7.0",
     "ollama-ai-provider-v2": "^2.0.0",
@@ -66,7 +66,7 @@
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
     "server-only": "^0.0.1",
-    "sharp": "^0.34.4",
+    "sharp": "^0.34.5",
     "superjson": "^2.2.6",
     "tsdav": "^2.1.6",
     "usehooks-ts": "^3.1.1",
@@ -81,15 +81,15 @@
     "@iconify/react": "^6.0.2",
     "@mozilla/readability": "0.6.0",
     "@tailwindcss/postcss": "^4.1.18",
-    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.1",
     "@types/heic-convert": "^2.1.0",
     "@types/pg": "8.16.0",
     "@types/react": "19.2.7",
     "@types/react-dom": "19.2.3",
     "@types/ws": "8.18.1",
-    "@typescript-eslint/eslint-plugin": "^8.51.0",
-    "@typescript-eslint/parser": "^8.51.0",
+    "@typescript-eslint/eslint-plugin": "^8.52.0",
+    "@typescript-eslint/parser": "^8.52.0",
     "@vitejs/plugin-react": "^5.1.2",
     "array-flatten": "3.0.0",
     "autoprefixer": "^10.4.23",
@@ -135,9 +135,12 @@
     "ws": "8.18.3",
     "zustand": "5.0.9"
   },
-  "overrides": {
-    "zod": "4.3.5",
-    "@types/react": "19.2.7",
-    "@types/react-dom": "19.2.3"
+  "pnpm": {
+    "overrides": {
+      "zod": "4.3.5",
+      "@types/react": "19.2.7",
+      "@types/react-dom": "19.2.3",
+      "ioredis": "^5.9.1"
+    }
   }
 }
